--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </button>
   </header>
   <!--Community  -->
-  < class="Community">
+  <class="Community">
     <div class="container-Community">
       <h1>Build The Community Your Fans Will Love</h1>
       <p class="Community-p">  
@@ -34,6 +34,7 @@
     </div>
 
     <div class="grid-container">
+      
       <!-- data -->
       <div class="data">
 
@@ -62,19 +63,19 @@
 
         </section>
 
-        <section class="img-grow">
+        <div class="img-grow">
           <img src="/images/illustration-grow-together.svg" alt="illustration-grow-together">
-        </section>
+        </div>
 
       </div>
 
       <div class="box-content">
 
-        <section class="img-flowing">
+        <div class="img-flowing">
           <img src="/images/illustration-flowing-conversation.svg" alt="illustration-flowing-conversation">
-        </section>
+        </div>
 
-        <section class="content" id=" content-flowing">
+        <section class="content" id="content-flowing">
           <h2>
             Flowing Conversations. 
           </h2>
@@ -97,9 +98,9 @@
           </p>
         </section>
 
-        <section class="img-Users">
+        <div class="img-Users">
           <img src="/images/illustration-your-users.svg" alt="illustration-your-users">
-        </section>
+        </div>
         
       </div>
       <!-- content -->
@@ -128,9 +129,9 @@
             </div>
             <!-- icon photo-Email -->
             <div class="iconF-I-T">
-              <a href="#"><i class="bi-facebook"></i></a>
-              <a href="#"><i class="bi-instagram"></i></a>
-              <a href="#"><i class="bi-twitter"></i></a>
+              <a href="facebook.com"><i class="bi-facebook"></i></a>
+              <a href="instagram.com"><i class="bi-instagram"></i></a>
+              <a href="twitter.com"><i class="bi-twitter"></i></a>
             </div>
             <!-- icon facebook instagram twitter -->
 
