--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </button>
   </header>
   <!--Community  -->
-  <class="Community">
+  <div class="Community">
     <div class="container-Community">
       <h1>Build The Community Your Fans Will Love</h1>
       <p class="Community-p">  
@@ -32,9 +32,9 @@
       </div>
 
     </div>
-
+  </div>
     <div class="grid-container">
-      
+
       <!-- data -->
       <div class="data">
 
