--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
             </div>
             <!-- icon photo-Email -->
             <div class="iconF-I-T">
-              <a href="facebook.com"><i class="bi-facebook"></i></a>
-              <a href="instagram.com"><i class="bi-instagram"></i></a>
-              <a href="twitter.com"><i class="bi-twitter"></i></a>
+              <a href="https://www.facebook.com"><i class="bi-facebook"></i></a>
+              <a href="https://www.instagram.com"><i class="bi-instagram"></i></a>
+              <a href="https://www.twitter.com"><i class="bi-twitter"></i></a>
             </div>
             <!-- icon facebook instagram twitter -->
 
@@ -145,7 +145,7 @@
             send you spam or pass on your email address
           </p>
            
-            <input type="text" class="text">
+            <input type="text" class="text" name="Email">
             <input type="submit" value="Subscribe" class="submit">
         </div>
         <!-- footer-right -->
