--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
             send you spam or pass on your email address
           </p>
            
-            <input type="text" class="text" name="Email">
-            <input type="submit" value="Subscribe" class="submit">
+            <input type="Email" class="text" name="Email" >
+            <input type="submit" name="submit" value="Subscribe" class="submit">
         </div>
         <!-- footer-right -->
       </div>
