--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             send you spam or pass on your email address
           </p>
            
-            <input type="Email" class="text" name="Email" >
+            <input type="Email" class="email" name="Email" >
             <input type="submit" name="submit" value="Subscribe" class="submit">
         </div>
         <!-- footer-right -->
